# GTK-List-ManifestDB-From-iOSBackup

./: COMMENTS  GTKManifestDBView.sh  LICENSE  Makefile.am  ManifestDBView.sh  README.md  about.xpm  autogen.sh  configure.ac  linguas.sh  main.cpp  manifestDBview.desktop.in  manifestDBview.sh.in  manifestDBwindow.h
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
po/: LINGUAS  POTFILES.in  de.po  manifestDBview.pot
src/: Makefile.am  ManifestDBView  main.cpp  manifestDBwindow.cpp  manifestDBwindow.h
